trunk/Archive2/34/a48082924016a4/output
main.cpp: In function 'int main()':
main.cpp:8:17: error: array must be initialized with a brace-enclosed initializer
  char temp[2] = i;
                 ^
main.cpp:9:15: error: invalid conversion from 'char*' to 'uint16_t {aka short unsigned int}' [-fpermissive]
  uint16_t j = temp;
               ^
